--- a/src/window/IdePrincipal.form
+++ b/src/window/IdePrincipal.form
@@ -143,7 +143,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Gramatica:"/>
+          <text value="Archivo"/>
         </properties>
       </component>
       <component id="32572" class="javax.swing.JTextField" binding="txtDirectorio" custom-create="true">
@@ -159,7 +159,7 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Buscar"/>
+          <text value="Guardar"/>
         </properties>
       </component>
       <scrollpane id="3605d">
